syntax = "proto3";

option java_package = "dev.serathiuk.chord.grpc";
option java_multiple_files = true;

message NodeId {
  string id = 1;
}

message Node {
  string id = 1;
  string host = 2;
  uint32 port = 3;
}

message NodeData {
  Node node = 1;
  Node nodeSuccessor = 2;
  Node nodePredecessor = 3;
}

message Entry {
  string key = 1;
  string value = 2;
}

message PutResponse {
  string nodeId = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string key = 1;
  string value = 2;
  string nodeId = 3;
}

message Empty {

}

service Chord {
  rpc getNodeData(Empty) returns (NodeData);
  rpc findSuccessor(NodeId) returns (Node);
  rpc findPredecessor(NodeId) returns (Node);
  rpc closestPrecedingNode(NodeId) returns (Node);
  rpc notify(Node) returns (Empty);
  rpc put(Entry) returns (PutResponse);
  rpc get(GetRequest) returns (GetResponse);
}